2012-02-27  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/testDLVProcess.cpp: Add some remarks.
	* testsuite/testAbstractContext.cpp: Likewise.

	* testsuite/Makefile.am: Add testDLVProcess.

	* src/dmcs/DLVEvaluator.cpp: Clean up.
	* include/mcs/NewContext.h: Likewise.
	* src/mcs/NewContext.cpp: Likewise.

2012-02-24  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/testDLVProcess.cpp: New file.

2012-02-22  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* src/dmcs/DLVEvaluator.cpp: A dirty hack: sleep 1 microsec to deal with
	race conditions when deleting dlvprocess.

	* src/dmcs/Evaluator.cpp: Separate init_mqs().

	* include/mcs/Heads.h: Add comparison operators for heads.

	* include/dmcs/DLVEvaluator.h: Move k1, k2 to the level of Evaluator.
	* src/dmcs/DLVEvaluator.cpp: Likewise.
	* include/dmcs/Evaluator.h: Likewise.

	* testsuite/testAbstractContext.cpp: Add testcase for leaf contexts.
	Add testcase for DLVEvaluator.

	* include/mcs/NewContext.h: Deal with leaf contexts.
	* src/mcs/NewContext.cpp: Likewise.
	* include/mcs/StreamingJoiner.h: Likewise.
	* src/dmcs/DLVEvaluator.cpp: Likewise.
	* src/dmcs/Evaluator.cpp: Likewise.

2012-02-21  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/testAbstractContext.cpp: Fix testcase.

	* src/mcs/NewContext.cpp: Fix return NULL heads.

	* src/dmcs/Evaluator.cpp: Fix case distinction.

	* src/dmcs/DLVInstantiator.cpp: Pass reference of the thread around.
	* src/dmcs/Instantiator.cpp: Likewise.

	* include/dmcs/DLVEvaluator.h: Create 1 process for each call.
	* src/dmcs/DLVEvaluator.cpp: Likewise.

	* src/mcs/StreamingJoiner.cpp: Fix return NULL.

2012-02-20  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* src/mcs/NewContext.cpp: Register REQUEST_MQ to md.

	* testsuite/testAbstractContext.cpp: Add testRunningContext.

	* include/network/NewConcurrentMessageDispatcher.h: Return queue size.
	* src/network/NewConcurrentMessageDispatcher.cpp: Likewise.
